--- a/index.html
+++ b/index.html
@@ -104,15 +104,6 @@
                                 data-pop="top" data-pop-no-shadow 
                                 data-pop-arrow data-pop-multiline>
 
-                                <!-- <label id="toggle4" class="toggle">
-                                    <input name="resource" 
-                                    class="toggle-checkbox query" 
-                                    type="checkbox" 
-                                    value="treatments">
-
-                                    <div class="toggle-switch"></div>
-                                </label> -->
-
                                 <label class="toggle toggle-inline">
                                     <input name="resource" class="toggle-checkbox query" type="checkbox" value="treatments">
                                     <div class="toggle-switch toggle-round toggle-medium toggle-green"></div>
@@ -197,17 +188,11 @@
                     aria-label="toggle between simple and advanced search" 
                     data-pop="left" data-pop-no-shadow data-pop-arrow>
 
-                    <!-- <label id="toggle5" class="toggle">
-                        <input name="searchtype" class="toggle-checkbox" 
-                            type="checkbox" value="advSearch">
-
-                        <div class="toggle-switch"></div>
-                    </label> -->
-
                     <label class="toggle toggle-inline">
                         <input name="searchtype" class="toggle-checkbox" type="checkbox" value="advSearch">
                         <div class="toggle-switch toggle-round toggle-small toggle-grey"></div>
                     </label>
+
                 </div>
 
             </div>
@@ -373,10 +358,11 @@
                     <!-- <option value="15">N/A</option> -->
                     <option value="Temperate Broadleaf and Mixed Forests">Biome is Temperate Broadleaf and Mixed Forests</option>
                     <option value="Temperate Conifer Forests">Biome is Temperate Conifer Forests</option>
-                    <!-- <option title="synonyms: Pampas, Veld, Savanna">Temperate Grasslands, Savannas and Shrublands</option>
-                    <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Pampas</option>
-                    <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Veld</option>
-                    <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Savanna</option> -->
+                    
+                    <!-- <option title="synonyms: Pampas, Veld, Savanna">Temperate Grasslands, Savannas and Shrublands</option> -->
+                    <!-- <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Pampas</option> -->
+                    <!-- <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Veld</option> -->
+                    <!-- <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Savanna</option> -->
                     
                     <optgroup label="Temperate Grasslands, Savannas & Shrublands">
                         <option value="Temperate Grasslands, Savannas & Shrublands">Temperate Grasslands, Savannas & Shrublands</option>
