--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="css/quicksearch.css">
     <link rel="stylesheet" href="css/toggles-lib.css">
     <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/figure.css">
     <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/charts.css">
     <link rel="stylesheet" href="css/throbber.css">
@@ -64,7 +65,7 @@
     <link rel="stylesheet" href="css/sparkline.css">
     <link rel="stylesheet" href="css/simpleLightbox.css">
     <link rel="stylesheet" href="css/simpleLightbox-modifiers.css">
-    <link rel="stylesheet" href="css/media-queries.css">
+    <!-- <link rel="stylesheet" href="css/media-queries.css"> -->
     <!-- endbuild -->
 </head>
 <body>
