--- a/maps.html
+++ b/maps.html
@@ -46,10 +46,11 @@
     <link rel="stylesheet" href="css/header.css">
     <!-- <link rel="stylesheet" href="css/toggles.css"> -->
     <!-- <link rel="stylesheet" href="css/grid.css"> -->
+    <link rel="stylesheet" href="css/figure.css">
     <link rel="stylesheet" href="css/throbber.css">
     <link rel="stylesheet" href="css/sparkline.css">
     <link rel="stylesheet" href="css/map.css">
-    <link rel="stylesheet" href="css/media-queries.css">
+    <!-- <link rel="stylesheet" href="css/media-queries.css"> -->
     <!-- endbuild -->
 </head>
 <body>
