moved example images to their own folder

--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
                     <button class="example-insert">articleDOI=10.11646/zootaxa.5284.3.7</button>
                 </details>
                 <details open>
-                    <summary><img src="img/icon_fts_all.svg" width="30" align="top">from treatments with the given term anywhere in the text (a fulltext search against the entire treatment)</summary>
+                    <summary><img src="img/examples/" width="30" align="top">from treatments with the given term anywhere in the text (a fulltext search against the entire treatment)</summary>
                     <button class="example-insert">phylogeny</button><br>
                 </details>
                 <details open>
-                    <summary><img src="img/icon_fts_caption.svg" width="30" align="top">with the given term anywhere in the text of the image caption (a fulltext search against just the image caption)</summary>
+                    <summary><img src="img/examples/icon_fts_caption.svg" width="30" align="top">with the given term anywhere in the text of the image caption (a fulltext search against just the image caption)</summary>
                     <button class="example-insert">captionText=phylogeny</button><br>
                 </details>
                 <details>
