hided a few quicksearch icons on mobile interface

--- a/index.html
+++ b/index.html
@@ -169,6 +169,23 @@
                         aria-label="find beetles" data-pop="bottom" 
                         data-pop-no-shadow 
                         data-pop-arrow>beetles</a>
+
+                    <a href="?order=Chiroptera"
+                        class="quicksearch bg-bat"
+                        aria-label="find bats" data-pop="bottom" 
+                        data-pop-no-shadow 
+                        data-pop-arrow>bats</a>
+                    <a href="?class=Reptilia"
+                        class="quicksearch bg-reptile"
+                        aria-label="find reptiles" 
+                        data-pop="bottom" data-pop-no-shadow 
+                        data-pop-arrow>reptiles</a>
+                    <a href="?family=Vespidae"
+                        class="quicksearch bg-wasp"
+                        aria-label="find wasps" data-pop="bottom" 
+                        data-pop-no-shadow 
+                        data-pop-arrow>wasps</a>
+
                     <a href="#"
                         id="search-help"
                         class="quicksearch2 bg-more"
