added bats, reptiles and wasps to example searches

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                         data-pop-no-shadow 
                         data-pop-arrow>beetles</a>
 
+                    <!-- visible only in tablet or larger screens -->
                     <a href="?order=Chiroptera"
                         class="quicksearch bg-bat"
                         aria-label="find bats" data-pop="bottom" 
@@ -185,6 +186,7 @@
                         aria-label="find wasps" data-pop="bottom" 
                         data-pop-no-shadow 
                         data-pop-arrow>wasps</a>
+                    <!-- end -->
 
                     <a href="#"
                         id="search-help"
@@ -217,12 +219,24 @@
                 <p>Click on the link to try the search<br><em><b>Note:</b> These extended syntax queries are currently only possible against treatments.</em></p>
     
                 <details open>
+                    <summary>bats<img src="img/quicksearch-icons/bat.png" width="30" align="top"></summary>
+                    <button class="example-insert">order=Chiroptera</button>
+                </details>
+                <details open>
+                    <summary>reptiles<img src="img/quicksearch-icons/reptile.png" width="30" align="top"></summary>
+                    <button class="example-insert">class=Reptilia</button>
+                </details>
+                <details open>
+                    <summary>wasps<img src="img/quicksearch-icons/wasp.png" width="30" align="top"></summary>
+                    <button class="example-insert">family=Vespidae</button>
+                </details>
+                <details open>
                     <summary>from the article with the given DOI (either of the two below will work)</summary>
                     <button class="example-insert">10.11646/zootaxa.5284.3.7</button><br>
                     <button class="example-insert">articleDOI=10.11646/zootaxa.5284.3.7</button>
                 </details>
                 <details open>
-                    <summary><img src="img/examples/" width="30" align="top">from treatments with the given term anywhere in the text (a fulltext search against the entire treatment)</summary>
+                    <summary><img src="img/examples/icon_fts_all.svg" width="30" align="top">from treatments with the given term anywhere in the text (a fulltext search against the entire treatment)</summary>
                     <button class="example-insert">phylogeny</button><br>
                 </details>
                 <details open>
